<resources>
    <string name="app_name">Detik.com</string>

    <string name="menu_beritautama">Berita Utama</string>
    <string name="menu_terbaru">Terbaru</string>
    <string name="menu_antarkansemangat">#AntarkanSemangat</string>
    <string name="menu_mostpopular">most popular</string>
    <string name="var_contdesc">contdesc</string>
    <string name="fotodesc">Foto : Dok.detiknews</string>
    <string name="detiknews">detikNews</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="loremsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="deskripsi_headline">Deskripsi Headline</string>
    <string name="home">home</string>
    <string name="layanan">layanan</string>
    <string name="video">video</string>
    <string name="judul_headline">Judul Headline</string>
    <string name="minggu_27_maret_2022_22_44_wib">Minggu,27 Maret 2022 22:44 WIB</string>
</resources>