<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--   header-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_168dp"
        android:layout_height="@dimen/_38dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_detikcom"/>

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="@dimen/_35dp"
        android:layout_height="@dimen/_38dp"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        app:layout_constraintEnd_toStartOf="@+id/cdv_photo"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        android:src="@drawable/ic_baseline_search_24"
        android:layout_marginEnd="@dimen/_16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_photo"
        android:layout_width="@dimen/_36dp"
        android:layout_height="@dimen/_36dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_50dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo">
        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/_36dp"
            android:layout_height="@dimen/_36dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/img_photo"/>
    </androidx.cardview.widget.CardView>
<!--    endregion-->

<!--    region menu top-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginEnd="@dimen/_7dp"
            android:text="@string/menu_terbaru"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginEnd="@dimen/_7dp"
            android:text="@string/menu_beritautama"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginEnd="@dimen/_7dp"
            android:text="@string/menu_antarkansemangat"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginEnd="@dimen/_7dp"
            android:text="@string/menu_mostpopular"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>
<!--    endregion-->

<!--    region news-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_MenuTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cdv_newsheadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_news1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tvw_TitleHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/judul_headline"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvw_DescHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/deskripsi_headline"
                        android:textColor="#EDEDED"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_daftarberita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/lay_berita"
                app:layout_constraintTop_toBottomOf="@+id/cdv_newsheadline"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_menubottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemTextColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>