<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="@dimen/_0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvw_ImgNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news"
                    android:layout_width="@dimen/_110dp"
                    android:layout_height="@dimen/_100dp"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:src="@drawable/img_news2" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvw_title"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/judul_headline"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cvw_ImgNews"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvw_Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginTop="@dimen/_8dp"
                android:text="@string/deskripsi_headline"
                android:textSize="@dimen/_14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cvw_ImgNews"
                app:layout_constraintTop_toBottomOf="@id/tvw_title"/>

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="@dimen/_27dp"
                android:layout_height="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:contentDescription="@string/var_contdesc"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_star_24"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>